--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <title>title</title>
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-  <img src="face.png">
+  <h1>Louis Ritchie</h1>
+  <h2>3rd Year B.Sc., Mathematics and Computer Science combined major, UVic</h2>
+  <p>I'm a student with a passion for software. I'm looking to join another software team in 2017 while I take classes at UVic.</p>
+  <p>I like creating user experiences through apps and working will the full stack of software, from frontend to devops.</p>
+  <p><a href="resume.pdf">Resume</a></p>
+  <p><a href="http://github.com/louisritchie/">Github</a></p>
 </body>
  </html>
 
