--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
   <h1>Louis Ritchie</h1>
   <h2>3rd Year B.Sc., Mathematics and Computer Science combined major, UVic</h2>
-  <p>I'm a student with a passion for software. I'm looking to join another software team in 2017 while I take classes at UVic.</p>
-  <p>I like creating user experiences through apps and working will the full stack of software, from frontend to devops.</p>
-  <p><a href="resume.pdf">Resume</a></p>
-  <p><a href="http://github.com/louisritchie/">Github</a></p>
+  <div>I'm a student with a passion for software. I'm looking to join another software team in 2017 while I take classes at UVic.</div>
+  <div>I like creating user experiences through apps and working will the full stack of software, from frontend to devops.</div>
+  <div><a href="resume.pdf">Resume</a></div>
+  <div><a href="http://github.com/louisritchie/">Github</a></div>
+  <h2>Blog</h2>
+  <a href="ggj.html">Global Game Jam - Jan 31st, 2017</a><br/>
+  <a href="170131.html">Uvic Aero, Twitch Detectify - Jan 31st, 2017</a><br/>
 </body>
  </html>
 
