--- a/ggj.html
+++ b/ggj.html
@@ -11,7 +11,7 @@
   <h2>Jan 31 2017</h2>
   <p>
 So on January 20th-22nd I ran UVic's 4th Global Game Jam. The two months leading 
-up to the jam were probably the most stressful three months of my life. 
+up to the jam were probably the most stressful two months of my life. 
   </p>
   <p>
 It started in mid-November when I was attending the third UVic GameDev Club meeting 
