--- a/index.html
+++ b/index.html
@@ -4,18 +4,38 @@
   <meta charset="UTF-8">
   <title>Louis Ritchie</title>
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 </head>
 <body>
   <h1>Louis Ritchie</h1>
   <h2>3rd Year B.Sc., Mathematics and Computer Science combined major, UVic</h2>
-  <div>I'm a student with a passion for software. I'm looking to join another software team in 2017 while I take classes at UVic.</div>
-  <div>I like creating user experiences through apps and working will the full stack of software, from frontend to devops.</div>
-  <div><a href="resume.pdf">Resume</a></div>
-  <div><a href="http://github.com/louisritchie/">Github</a></div>
+  <div>
+    
+    Currently runs <a href="https://www.facebook.com/groups/uvicgamedev/">UVic GameDev club</a>. 
+    Member of <a href="http://www.uvicaero.com/">UVic Aero</a> 
+    and <a href="http://hackuvic.com">UVic Web Dev club</a>. 
+    Organized <a href="http://victoriaggj.com">Global Game Jam 2017</a>.
+  
+  </div>
+  <div>
+    
+I code in Vim with the Dvorak layout on an 
+Advantage Kinesis keyboard. 
+I mostly find myself coding Javascript apps. 
+I run my own Ubuntu servers with Digital Ocean. 
+I'm interested in growing student participation in tech events, 
+working on my own projects, and working in student teams.
+
+  </div>
+  <div class="resume-and-github">
+    <a href="resume.pdf">Resume</a>
+    <a href="http://github.com/louisritchie/">Github</a>
+  </div>
   <h2>Blog</h2>
-  <a href="ggj.html">Global Game Jam - Jan 31st, 2017</a><br/>
-  <a href="170131.html">Uvic Aero, Twitch Detectify - Jan 31st, 2017</a><br/>
+  <div>
+    <a href="ggj.html">Global Game Jam - Jan 31st, 2017</a><br/>
+    <a href="170131.html">Uvic Aero, Detectify project - Jan 31st, 2017</a><br/>
+  </div>
 </body>
  </html>
 
