--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </div>
   <div>
     
-I code in Vim with the Dvorak layout on an 
-Advantage Kinesis keyboard. 
+I code in Vim with the Dvorak layout on a 
+Kinesis Advantage keyboard. 
 I mostly find myself coding Javascript apps. 
 I run my own Ubuntu servers with Digital Ocean. 
 I'm interested in growing student participation in tech events, 
