more content: links to good repositories

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@ working on my own projects, and working in student teams.
     <a href="resume.pdf">Resume</a>
     <a href="http://github.com/louisritchie/">Github</a>
   </div>
+  <h2>Repos of note</h2>
+  <div>
+    <a href="https://github.com/LouisRitchie/Prims_Algorithm">Prims Algorithm for Minimum Spanning Trees</a><br/>
+    <a href="https://github.com/LouisRitchie/spacer">CSS indenter in Python</a><br/>
+    <a href="https://github.com/williamgrosset/Detectify">Detectify - Detect viewbots on Twitch</a><br/>
+    <a href="https://github.com/LouisRitchie/victoriaggj_landing">Global Game Jam landing page</a><br/>
+    <a href="https://github.com/LouisRitchie/dotfiles">My dotfiles</a><br/>
+  </div>
   <h2>Blog</h2>
   <div>
     <a href="ggj.html">Global Game Jam - Jan 31st, 2017</a><br/>
