add body padding, change layout. done for now.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 </head>
 <body>
-  <h1>Louis Ritchie</h1>
-  <h2>3rd Year B.Sc., Mathematics and Computer Science combined major, UVic</h2>
+  <div>
+    <h1>Louis Ritchie</h1>
+    <h2>3rd Year B.Sc., Mathematics and Computer Science combined major, UVic</h2>
+    <div class="resume-and-github">
+      <a href="resume.pdf">Resume</a>
+      <a href="http://github.com/louisritchie/">Github</a>
+    </div>
+  </div>
+  <br />
   <div>
     
     Currently runs <a href="https://www.facebook.com/groups/uvicgamedev/">UVic GameDev club</a>. 
@@ -27,20 +34,17 @@ I'm interested in growing student participation in tech events,
 working on my own projects, and working in student teams.
 
   </div>
-  <div class="resume-and-github">
-    <a href="resume.pdf">Resume</a>
-    <a href="http://github.com/louisritchie/">Github</a>
-  </div>
-  <h2>Repos of note</h2>
+  <br />
   <div>
+    <h2>Repos of note</h2>
     <a href="https://github.com/LouisRitchie/Prims_Algorithm">Prims Algorithm for Minimum Spanning Trees</a><br/>
     <a href="https://github.com/LouisRitchie/spacer">CSS indenter in Python</a><br/>
     <a href="https://github.com/williamgrosset/Detectify">Detectify - Detect viewbots on Twitch</a><br/>
     <a href="https://github.com/LouisRitchie/victoriaggj_landing">Global Game Jam landing page</a><br/>
     <a href="https://github.com/LouisRitchie/dotfiles">My dotfiles</a><br/>
   </div>
-  <h2>Blog</h2>
   <div>
+    <h2>Blog</h2>
     <a href="ggj.html">Global Game Jam - Jan 31st, 2017</a><br/>
     <a href="170131.html">Uvic Aero, Detectify project - Jan 31st, 2017</a><br/>
   </div>
