make blog post about ffmpeg (on feb18, forgot to commit)

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ working on my own projects, and working in student teams.
     <h2>Blog</h2>
     <a href="ggj.html">Global Game Jam - Jan 31st, 2017</a><br/>
     <a href="170131.html">Uvic Aero, Detectify project - Jan 31st, 2017</a><br/>
+    <a href="170218.html">Concatenate multiple mp4's with ffmpeg - Feb 18th, 2017</a><br/>
   </div>
 </body>
  </html>
