blog post: html and css time consuming and strenuous

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ working on my own projects, and working in student teams.
     <a href="ggj.html">Global Game Jam - Jan 31st, 2017</a><br/>
     <a href="170131.html">Uvic Aero, Detectify project - Jan 31st, 2017</a><br/>
     <a href="170218.html">Concatenate multiple mp4's with ffmpeg - Feb 18th, 2017</a><br/>
+    <a href="170226.html">Writing HTML & CSS time-consuming and strenuous</a><br/>
   </div>
 </body>
  </html>
