call myself president and software dev to sound legit

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <br />
   <div>
     
-    Currently runs <a href="https://www.facebook.com/groups/uvicgamedev/">UVic GameDev club</a>. 
-    Member of <a href="http://www.uvicaero.com/">UVic Aero</a> 
-    and <a href="http://hackuvic.com">UVic Web Dev club</a>. 
+    President of <a href="https://www.facebook.com/groups/uvicgamedev/">UVic GameDev club</a>. 
+    Software developer for <a href="http://www.uvicaero.com/">UVic Aero</a>.
+    Organizer of events for <a href="http://hackuvic.com">UVic Web Dev club</a>. 
     Organized <a href="http://victoriaggj.com">Global Game Jam 2017</a>.
   
   </div>
