Add a missing end quotation mark

--- a/170311.html
+++ b/170311.html
@@ -11,7 +11,7 @@
   <h2>March 11 2017</h2>
   <h3>Organizing student-run tech events</h3>
   <p>
-  Today is the first day of <a href="http://w17.hackuvic.com/>HackUVic</a>, an annual hackathon held at UVic, put on by 
+  Today is the first day of <a href="http://w17.hackuvic.com/">HackUVic</a>, an annual hackathon held at UVic, put on by 
   UVic WebDev. It's also the second last day of <a href="https://itch.io/jam/resistjam">ResistJam</a>, an annual Game Jam
   that is online-based, but is nonetheless being held at UVic on the 3rd floor (today is Saturday, but it's been running all week.)
   I've been spending most of my free time and energy on these events for the past three weeks.
