add an about page

--- a/index.html
+++ b/index.html
@@ -16,22 +16,18 @@
     </div>
   </div>
   <br />
-  <div>
+  <h2>About me</h2>
+  <ul>
     
-    President of <a href="https://www.facebook.com/groups/uvicgamedev/">UVic GameDev club</a>. 
-    Software developer for <a href="http://www.uvicaero.com/">UVic Aero</a>.
-    Organizer of events for <a href="http://hackuvic.com">UVic Web Dev club</a>. 
-    Organized <a href="http://victoriaggj.com">Global Game Jam 2017</a>.
+	<li>President of <a href="https://www.facebook.com/groups/uvicgamedev/">UVic GameDev club</a>. </li>
+	<li>Software developer for <a href="http://www.uvicaero.com/">UVic Aero</a>.</li>
+	<li>Lead organizer of <a href="http://victoriaggj.com">Global Game Jam 2017</a>.</li>
+	<li>Co-lead organizer of HackUVic for <a href="http://hackuvic.com">UVic Web Dev club</a>. </li>
+	<li><a href="about.html">More about me</a></li>
   
-  </div>
+  </ul>
   <div>
     
-I code in Vim with the Dvorak layout on a 
-Kinesis Advantage keyboard. 
-I mostly find myself coding Javascript apps. 
-I run my own Ubuntu servers with Digital Ocean. 
-I'm interested in growing student participation in tech events, 
-working on my own projects, and working in student teams.
 
   </div>
   <br />
