--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<li>Lead organizer of <a href="http://victoriaggj.com">Global Game Jam 2017</a>.</li>
 	<li>Co-lead organizer of HackUVic for <a href="http://hackuvic.com">UVic Web Dev club</a>. </li>
 	<li><a href="about.html">More about me</a></li>
+	<li><a href="thing.html">More about me</a></li>
   
   </ul>
   <div>
