--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <a href="170218.html">Concatenate multiple mp4's with ffmpeg - Feb 18th, 2017</a><br/>
     <a href="170226.html">Writing HTML & CSS time-consuming and strenuous - Feb 26th, 2017</a><br/>
     <a href="170311.html">Organizing student-run tech events - March 11th, 2017 </a><br/>
+    <a href="170329.html">Breaking my OS provides motivation to learn Linux Systems Programming - March 29th, 2017 </a><br/>
   </div>
 </body>
  </html>
