remove explitives from ggj.html

--- a/ggj.html
+++ b/ggj.html
@@ -26,8 +26,8 @@ while I'm early in my career.
   <p>
 I got hooked up with Chris from IGDA Victoria and he helped me get a bunch of sponsorship
 money right off the bat. Then I needed to put up a website for the jam, get a venue,
-get volunteers, get more sponsorship, get prizes, get a tshirts, and all this other 
-shit that took a fuckload of time. Chris was super helpful but I really was not 
+get volunteers, get more sponsorship, get prizes, get a tshirts, and all these other
+tasks that took a surprising amount of time. Chris was super helpful but I really was not 
 prepared for the amount of effort this took. In the weeks before Christmas break, I
 pulled many all nighters and drank waay too much coffee trying to get the site look 
 good on mobile. I was scrambling to finish t-shirt designs and get a decent venue 
@@ -35,7 +35,7 @@ booked, and things were really proving hard to pull together. No one had a good
 venue for us, but we really didn't want to host the event on UVic campus.
   </p>
   <p>
-It's really fucking stressful to have two people breathing down your neck at once.
+It's really stressful to have two people breathing down your neck at once.
 Chris was on one side, trying to get me going with Game Jam organization, but on the
 other side I had my co-op boss who knew nothing of me volunteering my time to 
 organize a game jam. I had to write this big Ruby script that managed Yaml files 
@@ -45,7 +45,7 @@ the Ruby script and equally hard on the Game Jam but people still weren't happy
 on either side.
   </p>
   <p>
-I ended up getting the script working at basically the very last minute. Fucking 
+I ended up getting the script working at basically the very last minute. That was 
 depressing. I also ended up getting chewed out by an Administrator of the Dean's 
 office at UVic for trying to use some space in the Engineering Office Wing for our
 game jam after trying and failing to get some 15+ downtown venues to host us.
@@ -56,8 +56,8 @@ of emotions, but I must say that at the end of it all, I felt damn good. I still
 feel pretty good.
   </p>
   <p>
-I still have shit to do for Chris, but since I'm done my co-op and I don't have to 
-get Slack messages every day about shit that's not done yet, I'm really quite happy.
+I still have some things to do for Chris, but since I'm done my co-op and I don't have to 
+get Slack messages every day about stuff that's not done yet, I'm really quite happy.
   </p>
   <p>
 Louis
