Restyle: text align left, resume and github thumbnails

--- a/index.html
+++ b/index.html
@@ -8,28 +8,32 @@
 <body>
   <div>
     <h1>Louis Ritchie</h1>
-    <h2>3rd Year B.Sc., Mathematics and Computer Science combined major, UVic</h2>
-    <div class="resume-and-github">
-      <a href="resume.pdf">Resume</a>
-      <a href="http://github.com/louisritchie/">Github</a>
-    </div>
+    <h2>3rd Year B.Sc., Mathematics and Computer Science, UVic</h2>
+	<div class="resume-and-github">
+	  <div>
+		<a href="resume.pdf">
+		  Resume
+		  <img src="resume_thumbnail.png" />
+		</a>
+	  </div>
+	  <div>
+		<a href="http://github.com/louisritchie/">
+		  Github
+		  <img src="github_thumbnail.png" />
+		</a>
+	  </div>
+	</div>
   </div>
-  <br />
   <h2>About me</h2>
   <ul>
-    
 	<li>President of <a href="https://www.facebook.com/groups/uvicgamedev/">UVic GameDev club</a>. </li>
 	<li>Software developer for <a href="http://www.uvicaero.com/">UVic Aero</a>.</li>
 	<li>Lead organizer of <a href="http://victoriaggj.com">Global Game Jam 2017</a>.</li>
 	<li>Co-lead organizer of HackUVic for <a href="http://hackuvic.com">UVic Web Dev club</a>. </li>
 	<li><a href="about.html">More about me</a></li>
-  
   </ul>
   <div>
-    
-
   </div>
-  <br />
   <div>
     <h2>Repos of note</h2>
     <a href="https://github.com/LouisRitchie/Prims_Algorithm">Prims Algorithm for Minimum Spanning Trees</a><br/>
@@ -48,7 +52,7 @@
     <a href="170329.html">Breaking my OS provides motivation to learn Linux Systems Programming - March 29th, 2017 </a><br/>
   </div>
 
-  <div>DEP</div>
+  <span>DEP</span>
 </body>
  </html>
 
