Increase font size

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div>
     <h1>Louis Ritchie</h1>
-    <h2>3rd Year B.Sc., Mathematics and Computer Science, UVic</h2>
+    <h2>3rd Year B.Sc., Math & Computer Science, UVic</h2>
 	<div class="resume-and-github">
 	  <div>
 		<a href="resume.pdf">
