Update about page.

--- a/about.html
+++ b/about.html
@@ -9,19 +9,72 @@
 <body>
   <h1>Louis Ritchie - <a href="index.html">Home</a></h1>
   <h2>About Louis</h2>
+  <h3>I'm a software engineer who likes to get his hands dirty.</h3>
   <p>
 I grew up in a very small town in the interior of BC. I moved to Kamloops, BC 
 when I was 18 to study Mathematics. At the end of my 2nd year, I decided to 
 focus on software, and moved to Victoria in September, 2015.
-Now I'm enrolled in a Computer Science and Mathematics combined degree, though
-my interest is in software engineering.
+I'm enrolled in, and am currently deferring, a Computer Science and Mathematics combined degree.
 I've compeleted two co-op terms with Ruboss (makers of Leanpub) during April 2016 - December 2016.
-I code in Vim with the Dvorak layout on a 
-Kinesis Advantage ergonomic keyboard. 
-My primary interest is becoming a better software engineer; I currently have no 
-specialization beyond that, though my strength is in web software.
-I'm also interested in growing student participation in tech events and 
-helping student teams.
+I now work at Reelgood.com as a full-stack developer.
+  </p>
+
+  <p>
+I write code in the Vim editor using the Dvorak key layout on a 
+Kinesis Advantage ergonomic keyboard.
+  </p>
+
+  <p>
+I have a pretty intense personality that's rooted in a deep concern for the state 
+of the planet. In particular, the greenhouse gas effect is very alarming to me: It 
+could be that we are actively creating a future where 200 years from now the atmosphere 
+is toxic. It could be that the <a href='https://en.wikipedia.org/wiki/Clathrate_gun_hypothesis'>clathrate gun</a> happens in the next 2-5 decades and kills 
+a large swath of humanity. Maybe this won't happen to you in your lifetime, but what if it 
+does, or it happens to your children?
+  </p>
+
+  <p>
+Do you understand evolution intuitively? Can you appreciate how many people lived 
+hunter-gatherer lives where there was no justice, no right to live, no decency and
+no protection from the brutality of another human? Tool-wielding bi-pedal creatures 
+have been around for 3,000,000 years at least. Suppose the average global population 
+was 1,000,000 humans - A low guess. That means that three trillion humans have lived 
+and died so that you could exist as the epitome of the bi-pedal mammal.
+  </p>
+
+  <p>
+So here we are, sitting atop a genetic throne made from the suffering of three trillion 
+men and women, rendering our planet unlivable for anyone born past 2100, let alone past 
+that. And you're telling yourself that it won't happen in your lifetime, or your childrens, maybe.
+But you are sitting on top of three million years of dead humans. Should they not have 
+evolved for you? Should they not have built rudimentary tools, for they would not live to 
+see the steam engine?
+  </p>
+
+  <p>
+Of course, human nature is rooted in our common drives that drive survival of the fittest.
+Have the prettiest wife. Win the most fights. Get the most food. Be the most 
+popular. But - most important of all - Do not waste energy. Do not work when it is not 
+necessary. Do not try when there is no immediate benefit to trying.
+  </p>
+
+  <p>
+Thus, the great tradgedy of the Earth is the internal conflict of man in his fight for 
+the future. Every human is born playing the game, and if every human lazily chooses 
+to lose, then we all die ('lose' in the sense that you're relaxing and consuming
+instead of eagerly advancing technology or policies that benefit humans). That's really all 
+there is to life, in my opinion. That's the
+real shit no one understands or wants to talk about.
+  </p>
+
+  <p>
+  I believe that <a href='http://onlinelibrary.wiley.com/doi/10.1002/rog.20004/pdf'>accelerated silicate weathering</a> as a global geo-engineering solution 
+will play a big role in reducing atmospheric carbon levels, so my energy is focused 
+on that in the long-term. In short, we need to crush and spread hundreds of cubic kilometers 
+of silicate minerals per year every year to capture the carbon output of the globe.
+My interest is in raising my personal capital to a level such that I can bootstrap 
+commercially viable rock-crushing/mining ventures, as well as convince 
+others to invest in my endeavors.
   </p>
 </body>
  </html>
