--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
   <div>
     <h1>Louis Ritchie</h1>
-    <h2>3rd Year B.Sc., Math & Computer Science, UVic</h2>
+    <h2>Full-Stack developer at Reelgood.com</h2>
+    <h3>Previously at Leanpub.com</h3>
+    <h3>3rd Year B.Sc., Math & Computer Science, UVic</h3>
 	<div class="resume-and-github">
 	  <div>
 		<a href="resume.pdf">
@@ -31,6 +33,7 @@
 	<li>Lead organizer of <a href="http://victoriaggj.com">Global Game Jam 2017</a>.</li>
 	<li>Co-lead organizer of HackUVic for <a href="http://hackuvic.com">UVic Web Dev club</a>. </li>
 	<li><a href="about.html">More about me</a></li>
+	<li><a href="pics.html">Pictures of me</a></li>
   </ul>
   <div>
   </div>
