Update headings to include links to employer websites.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <div>
     <h1>Louis Ritchie</h1>
-    <h2>Full-Stack developer at Reelgood.com</h2>
-    <h3>Previously at Leanpub.com</h3>
+    <h2>Full-Stack developer at <a href='https://reelgood.com'>Reelgood.com</a></h2>
+    <h3>Previously at <a href='https://leanpub.com'>Leanpub.com</a></h3>
     <h3>3rd Year B.Sc., Math & Computer Science, UVic</h3>
 	<div class="resume-and-github">
 	  <div>
