Give the pics a width of 30vw.

--- a/pics.html
+++ b/pics.html
@@ -9,30 +9,30 @@
 <body>
   <h1>Louis Ritchie - <a href="index.html">Home</a></h1>
   <h2>Pictures of me</h2>
-  <img src='assets/face.jpg' />
+  <img style='width: 30vw' src='assets/face.jpg' />
   <p>
   I visit these people sometimes
   </p>
-  <img src='assets/otherfam.jpg' />
+  <img style='width: 30vw' src='assets/otherfam.jpg' />
   <p>
   Here's my parents.
   </p>
-  <img src='assets/fam.jpg' />
+  <img style='width: 30vw' src='assets/fam.jpg' />
   <p>
   Here's my sister and I at the top of Craigdarroch Castle in Victoria, BC.
   </p>
-  <img src='assets/sister.jpg' />
-  <p>
-  Here's me and my mom enjoying a lovely dinner before I head to the Phillipines, with my sister behind the camera.
+  <img style='width: 30vw' src='assets/sister.jpg' />
+  <p style='width: 30vw'>
+  Here's my mom and I enjoying a lovely dinner before I head to the Phillipines, with my sister behind the camera.
   </p>
-  <img src='assets/smile.jpg' />
+  <img style='width: 30vw' src='assets/smile.jpg' />
   <p>
   Here's me enthused after a good rock throw.
   </p>
-  <img src='assets/throw.jpg' />
+  <img style='width: 30vw' src='assets/throw.jpg' />
   <p>
   And here's me on the bus when I was just a wee gaffer.
   </p>
-  <img src='assets/young.jpg' />
+  <img style='width: 30vw' src='assets/young.jpg' />
 </body>
  </html>
