Repos of note -> repositories of note.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div>
   </div>
   <div>
-    <h2>Repos of note</h2>
+    <h2>Repositories of note</h2>
     <a href="https://github.com/LouisRitchie/Prims_Algorithm">Prims Algorithm for Minimum Spanning Trees</a><br/>
     <a href="https://github.com/LouisRitchie/spacer">CSS indenter in Python</a><br/>
     <a href="https://github.com/williamgrosset/Detectify">Detectify - Detect viewbots on Twitch</a><br/>
