--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
   </div>
   <div>
     <h2>Blog</h2>
-    <a href="ggj.html">Global Game Jam - Jan 31st, 2017</a><br/>
-    <a href="170131.html">Uvic Aero, Detectify project - Jan 31st, 2017</a><br/>
-    <a href="170218.html">Concatenate multiple mp4's with ffmpeg - Feb 18th, 2017</a><br/>
-    <a href="170226.html">Writing HTML & CSS time-consuming and strenuous - Feb 26th, 2017</a><br/>
-    <a href="170311.html">Organizing student-run tech events - March 11th, 2017 </a><br/>
-    <a href="170329.html">Breaking my OS provides motivation to learn Linux Systems Programming - March 29th, 2017 </a><br/>
+    Jan 31st, 2017 <a href="ggj.html">Global Game Jam</a><br/>
+    Jan 31st, 2017 <a href="170131.html">Uvic Aero, Detectify project</a><br/>
+    Feb 18th, 2017 <a href="170218.html">Concatenate multiple mp4's with ffmpeg</a><br/>
+    Feb 26th, 2017 <a href="170226.html">Writing HTML & CSS time-consuming and strenuous</a><br/>
+    March 11th, 2017 <a href="170311.html">Organizing student-run tech events</a><br/>
+    March 29th, 2017 <a href="170329.html">Breaking my OS provides motivation to learn Linux Systems Programming</a><br/>
   </div>
 
   <span>DEP</span>
