Add the `sup son?` emoticon

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     March 29th, 2017 <a href="170329.html">Breaking my OS provides motivation to learn Linux Systems Programming</a><br/>
   </div>
 
-  <span>DEP</span>
+  <span>¯\_(ツ)_/¯</span>
 </body>
  </html>
 
