--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
   </div>
 
   <span>¯\_(ツ)_/¯</span>
+hakase-node.co
+https://www.howtoforge.com/tutorial/how-to-deploy-nodejs-applications-with-pm2-and-nginx-on-ubuntu/
 </body>
  </html>
 
